--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@ant-design/icons-vue": "^6.0.1",
     "ant-design-vue": "^2.2.8",
     "core-js": "^3.6.5",
+    "dexie": "^3.0.3",
     "register-service-worker": "^1.7.1",
     "vue": "^3.2.16",
     "vue-class-component": "^8.0.0-0",
