--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@ant-design/icons-vue": "^6.0.1",
     "ant-design-vue": "^2.2.8",
+    "axios": "^0.24.0",
     "core-js": "^3.6.5",
     "dexie": "^3.0.3",
     "register-service-worker": "^1.7.1",
